# Nes-Emulator

./: .gitignore  CMakeLists.txt  README.md  run_tests.py  tests_status.txt
.github/workflows/: build.yml
source/: addressing_modes.c  addressing_modes.h  cartridge.c  cartridge.h  cpu.c  cpu.cpp  cpu.h  cpu.hpp  main.c  main.cpp  mapper.c  mapper.h  memory_bus.c  memory_bus.cpp  memory_bus.h  memory_bus.hpp  opcodes.c  opcodes.h  types.h
